--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Portfolio</title>
+    <title>Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/header.css">
+    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/footer.css">
 </head>
 <body>
    <header>
@@ -12,19 +17,29 @@
         <h1> <a href="">Portfolio.</a> </h1>
        <ul>
         <li><a href="">projects</a></li>
-        <li><a href="">contat</a></li>
+        <li><a href="">contact</a></li>
         <li><a href="">about</a></li>
        </ul>
     </nav>
    </header>
    <main>
-    <section>
+    <section id="home">
         <div class="content">
             <h2>Hi, my name is <span>Samuel</span>!</h2>
             <h3>I am a full stack developer.</h3>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, possimus repudiandae nisi quae totam magnam corporis eligendi expedita quibusdam inventore libero soluta quas eum, vitae numquam doloribus repellendus. Fugiat mollitia architecto accusantium eaque blanditiis ratione.</p>
+            <ul>
+                <li class="download"><a href="https://flowcv.com/resume/nopt4smk9cc5" target="_blank">Download CV</a></li>
+                <li class="social"><a href=""> <img src="./assets/github.svg" alt=""></a></li>
+                <li class="social"><a href=""> <img src="./assets/linkedin.svg" alt=""></a></li>
+                <li class="social"><a href=""> <img src="./assets/instagram.svg" alt=""></a></li>
+            </ul>
         </div>
-        <div class="photo"></div>
+        <div class="photo">
+            <div>
+                <img src="https://images.unsplash.com/photo-1645106281521-86da01d1031d?q=80&amp;w=2080&amp;auto=format&amp;fit=crop&amp;ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
+        </div>
     </section>
    </main>
    <footer>
